<resources>
    <string name="app_name">CW1 Native</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="required">Required*</string>
    <string name="tripName">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="createTrip">Create Trip</string>
    <string name="description">Description</string>
    <string name="phone">Support Phone Number</string>
    <string name="country">Country</string>
    <string name="optional">Optional</string>
    <string name="updateTrip">Update Trip</string>
    <string name="deleteTrip">Delete Trip</string>
    <string name="add">Add</string>
    <string name="expenseType">Expense Type</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="comment">Comment</string>
    <string name="addExpense">Add Expense</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="resetData">Reset Data</string>
</resources>