<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp">

    <!--Expense Type-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/typeContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginHorizontal="20dp"
        app:helperText="@string/required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/typeEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:lines="1"
            android:inputType="none"
            android:hint="@string/expenseType"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--Amount-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        app:helperText="@string/required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:endIconMode="clear_text"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="number"
            android:hint="@string/amount"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--Date-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        app:helperText="@string/required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:endIconMode="clear_text"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="date"
            android:hint="@string/date"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--Time-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        app:helperText="@string/required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:endIconMode="clear_text"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="time"
            android:hint="@string/time"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--Comment-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/comment"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--Submit-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/addExpense"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@null"
        android:background="@drawable/filter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>